--- a/css/login.scss
+++ b/css/login.scss
@@ -20,12 +20,8 @@ body{
 		 width:1000px;
 		 margin: 0 auto;
 	 }
-	 .show{
-		 display: block;
-	 }
-	 .hide{
-		   display: none;
-	 }
+	
+	 
 /*头部样式*/
 header{
 	margin-top: 50px;
@@ -43,7 +39,6 @@ line-height: 60px;
 	float: right;
 	height:60px;
 	padding-top: 30px;
-	
 }
 #contain div:first-child a:first-child{
 	height:60px;
@@ -93,61 +88,70 @@ section{
 		padding:10px 50px ;
 		
 	}
-	#m-right div:nth-of-type(1){
+	#m-right .show{
 		 width:190px;
 		 border-bottom: 2px solid red;
-		 padding-bottom: 10px;
+		padding-top:10 px;
+      font-size: 20px;
 		 text-align: center;
 		 float: left;
-	}
-	#m-right div:nth-child(2){
-		width:190px;
-     border-bottom: 2px solid #CECECE;
+		 height: 30px;
+		 @include point;
 
-		padding-bottom: 10px;
+	}
+	#m-right .hide{
+		width:190px;
+		font-size: 20px;
+	@include point;
+     border-bottom: 2px solid #CECECE;
+ height: 30px;
+		padding-top:10 px;
 		text-align: center;
 		float: left;
 	}
-
-	
-	#m-right input{
+ #m-right .tip{
+	 width:380px;
+	 height:30px;
+ }
+	.clear{
+		clear: both;
+	}
+	#y-login input{
 		width:378px;
 		height: 33px;
 		border: 1px solid #CECECE;
 		margin-bottom: 10px;
 	
 	}
-	#m-right input:nth-of-type(1){
-		margin-top:30px;
-		
-		
+	
+	#y-login input:nth-of-type(3){
+		margin:10px 0;
+		background-color: #FF0000;
+		height: 40px;
+		font-size: 20px;
+		width:380px;
+		@include point;
+		color: white;
 	}
 	#m-right div:nth-of-type(3){
-		width:480px;
-		margin-bottom: 15px;
+		width:380px;
+	
 	}
 	#m-right div:nth-of-type(3)>div{
 		     width: 380px;
 				 border: none;
 		}
-#m-right div:nth-of-type(3)>div a:first-child{
+#y-login div:nth-of-type(2) a:nth-child(1){
 	float: left;
 	color: black;
 	font-size: 14px;
 
 }
-#m-right div:nth-of-type(3)>div a:last-child{
+#y-login div:nth-of-type(2) a:nth-child(2){
   float: right;
 	color: blue;
 }
-#m-right input:nth-of-type(3){
-	margin:10px 0;
-	background-color: #FF0000;
-	height: 40px;
-	font-size: 25px;
-	width:380px;
-	
-}
+
 #m-right div:nth-of-type(3) div:last-child{
 	width:380px;
 	height: 22px;
@@ -172,9 +176,24 @@ section{
 	margin-top: 10px;
 		}
 		
-		
-		
-	
+		#m-right #s-login input{
+			width:378px;
+			height: 33px;
+			border: 1px solid #CECECE;
+			margin-bottom: 10px;
+		}
+	#m-right	#s-login input:nth-of-type(3){
+			margin:10px 0;
+			background-color: #FF0000;
+			height: 40px;
+			font-size: 20px;
+			@include point;
+      color: white;
+			width:380px;}
+	#s-login div{
+		float: right;
+	}
+
 
 
 	
