--- a/css/register.scss
+++ b/css/register.scss
@@ -119,6 +119,7 @@ line-height: 60px;
    }
    .register-form{
 	  margin-top: 20px;
+		position: relative;
       .clear-f{clear: both;
 	  font-size: 12px;
 	  margin-left: 100px;
@@ -138,6 +139,12 @@ line-height: 60px;
 		   padding-top: 2px;
 			color: red;
 	  }
+		 span{
+			 position: absolute;
+			 left: 400px;
+			 top: 0;
+			 height: 40px;
+		 }
 	 
 	  }
 	  input{
@@ -149,6 +156,14 @@ line-height: 60px;
 	  	float: left;
 	   
 	   }
+		 .getRandom{
+			 width:146px;
+			 
+		 }
+		 .getVerify{
+			 width:150px;
+			 height: 33px;
+		 }
    }
    .register-form{
 	   #teshu{
